feat: force compilation of log4j plugin, exposing additional regex pattern matches, moving values to mask into central location